[gd_scene load_steps=11 format=3 uid="uid://main123"]

[ext_resource type="Script" uid="uid://djeihfobr55hf" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://player123" path="res://scenes/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://camera123" path="res://scenes/GameCamera.tscn" id="3_camera"]
[ext_resource type="Script" uid="uid://tr6g34nlxxs8" path="res://scripts/FloorGenerator.gd" id="4_floorgenerator"]
[ext_resource type="PackedScene" uid="uid://hud123" path="res://scenes/ui/HUD.tscn" id="5_hud"]
[ext_resource type="PackedScene" uid="uid://touch123" path="res://scenes/ui/TouchControls.tscn" id="6_touch"]
[ext_resource type="PackedScene" uid="uid://gameover123" path="res://scenes/ui/GameOver.tscn" id="7_gameover"]

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.02, 0.01, 0.08, 1, 0.06, 0.04, 0.15, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
width = 1
height = 512
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leftwall"]
size = Vector2(40, 200000)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_left = -1000.0
offset_top = -200000.0
offset_right = 1500.0
offset_bottom = 5000.0
color = Color(0.02, 0.015, 0.06, 1)

[node name="BGGradient" type="TextureRect" parent="."]
z_index = -9
offset_left = -1000.0
offset_top = -200000.0
offset_right = 1500.0
offset_bottom = 5000.0
texture = SubResource("GradientTexture2D_bg")
stretch_mode = 1

[node name="TowerBackground" type="ColorRect" parent="."]
z_index = -5
offset_left = 20.0
offset_top = -200000.0
offset_right = 460.0
offset_bottom = 5000.0
color = Color(0.06, 0.04, 0.14, 1)

[node name="TowerGlow" type="ColorRect" parent="."]
z_index = -4
offset_left = 22.0
offset_top = -200000.0
offset_right = 458.0
offset_bottom = 5000.0
color = Color(0.1, 0.06, 0.2, 0.5)

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(20, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-20, -95000)
shape = SubResource("RectangleShape2D_leftwall")

[node name="Visual" type="ColorRect" parent="LeftWall"]
z_index = 1
offset_left = -40.0
offset_top = -200000.0
offset_bottom = 5000.0
color = Color(0.1, 0.06, 0.25, 1)

[node name="GlowInner" type="ColorRect" parent="LeftWall"]
z_index = 2
offset_left = -4.0
offset_top = -200000.0
offset_right = 2.0
offset_bottom = 5000.0
color = Color(0.4, 0.2, 0.8, 0.4)

[node name="GlowEdge" type="ColorRect" parent="LeftWall"]
z_index = 3
offset_left = -1.0
offset_top = -200000.0
offset_right = 1.0
offset_bottom = 5000.0
color = Color(0.6, 0.3, 1, 0.6)

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(460, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(20, -95000)
shape = SubResource("RectangleShape2D_leftwall")

[node name="Visual" type="ColorRect" parent="RightWall"]
z_index = 1
offset_top = -200000.0
offset_right = 40.0
offset_bottom = 5000.0
color = Color(0.1, 0.06, 0.25, 1)

[node name="GlowInner" type="ColorRect" parent="RightWall"]
z_index = 2
offset_left = -2.0
offset_top = -200000.0
offset_right = 4.0
offset_bottom = 5000.0
color = Color(0.4, 0.2, 0.8, 0.4)

[node name="GlowEdge" type="ColorRect" parent="RightWall"]
z_index = 3
offset_left = -1.0
offset_top = -200000.0
offset_right = 1.0
offset_bottom = 5000.0
color = Color(0.6, 0.3, 1, 0.6)

[node name="FloorGenerator" type="Node2D" parent="."]
script = ExtResource("4_floorgenerator")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(240, 690)

[node name="GameCamera" parent="." instance=ExtResource("3_camera")]
position = Vector2(0, 56)

[node name="UI" type="Node" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_hud")]

[node name="TouchControls" parent="UI" instance=ExtResource("6_touch")]

[node name="GameOver" parent="UI" instance=ExtResource("7_gameover")]
visible = false
